# hbrs-theta_utils

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  hbrs-theta_utils-config.cmake.in
include/hbrs/theta_utils/: CMakeLists.txt  config.hpp.in
include/hbrs/theta_utils/detail/: copy_matrix.hpp  int_ranges.hpp  make_theta_fields.hpp
include/hbrs/theta_utils/dt/: command.hpp  command_option.hpp  exception.hpp  nc_attribute.hpp  nc_cntr.hpp  nc_dimension.hpp  nc_exception.hpp  nc_variable.hpp  number_sequence.hpp  theta_field.hpp  theta_grid.hpp  theta_view.hpp
include/hbrs/theta_utils/fn/: decompose.hpp  execute.hpp  pca_filter.hpp  visualize.hpp  vtk.hpp
include/hbrs/theta_utils/fwd/dt/: command.hpp  command_option.hpp  exception.hpp  nc_attribute.hpp  nc_cntr.hpp  nc_dimension.hpp  nc_exception.hpp  nc_variable.hpp  number_sequence.hpp  theta_field.hpp  theta_grid.hpp  theta_view.hpp
include/hbrs/theta_utils/fwd/fn/: decompose.hpp  execute.hpp  pca_filter.hpp  visualize.hpp  vtk.hpp
include/hbrs/theta_utils/preprocessor/: core.hpp
src/hbrs/: CMakeLists.txt
src/hbrs/theta_utils/: CMakeLists.txt  config.hpp.in  main.cpp
src/hbrs/theta_utils/core/: preprocessor.hpp
src/hbrs/theta_utils/core/preprocessor/: fwd.hpp  impl.hpp
src/hbrs/theta_utils/detail/: CMakeLists.txt  copy_matrix.hpp  gather.hpp  iff.hpp  int_ranges.hpp  make_matrix.hpp  make_theta_fields.hpp  matrix.hpp  scatter.hpp  test.hpp  vtk.hpp
src/hbrs/theta_utils/detail/copy_matrix/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp  test.cpp
src/hbrs/theta_utils/detail/gather/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp  test.cpp
src/hbrs/theta_utils/detail/iff/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/detail/int_ranges/: CMakeLists.txt  fwd.hpp  impl.hpp  test.cpp
src/hbrs/theta_utils/detail/make_matrix/: CMakeLists.txt  fwd.hpp  impl.hpp  test.cpp
src/hbrs/theta_utils/detail/make_theta_fields/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/detail/matrix/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp  test.cpp
src/hbrs/theta_utils/detail/scatter/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/detail/test/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/detail/vtk/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/: CMakeLists.txt  command.cpp  command.hpp  command_option.cpp  command_option.hpp  exception.cpp  exception.hpp  nc_attribute.cpp  nc_attribute.hpp  nc_cntr.cpp  nc_cntr.hpp  nc_dimension.cpp  nc_dimension.hpp  nc_exception.hpp  nc_variable.hpp  theta_field.cpp  theta_field.hpp  theta_field_matrix.hpp  theta_grid.cpp  theta_grid.hpp  theta_view.hpp
src/hbrs/theta_utils/dt/command/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/command_option/: fwd.hpp  impl.hpp
src/hbrs/theta_utils/dt/exception/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/nc_attribute/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/nc_cntr/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/nc_dimension/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/nc_exception/: fwd.hpp  impl.hpp
src/hbrs/theta_utils/dt/nc_variable/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/theta_field/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp  test.cpp
src/hbrs/theta_utils/dt/theta_field_matrix/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/theta_grid/: fwd.hpp  impl.cpp  impl.hpp
src/hbrs/theta_utils/dt/theta_view/: fwd.hpp  impl.hpp
src/hbrs/theta_utils/fn/: CMakeLists.txt  decompose.cpp  execute.hpp  execute_help.cpp  execute_pca.cpp  execute_visualize.cpp  pca_filter.cpp  pca_filter.hpp  visualize.cpp  vtk.cpp
src/hbrs/theta_utils/fn/execute/: fwd.hpp  impl.hpp
src/hbrs/theta_utils/fn/execute/impl/: CMakeLists.txt  help.cpp  pca.cpp  version.cpp  visualize.cpp
src/hbrs/theta_utils/fn/execute/test/: CMakeLists.txt  pca.cpp
src/hbrs/theta_utils/fn/pca_filter/: CMakeLists.txt  fwd.hpp  impl.cpp  impl.hpp  test.cpp
test/: CMakeLists.txt
test/detail/: CMakeLists.txt
test/dt/: CMakeLists.txt  theta_field.cpp
test/fn/: CMakeLists.txt  pca_filter.cpp
