# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(gather)
add_subdirectory(iff)
add_subdirectory(int_ranges)
add_subdirectory(matrix)
add_subdirectory(scatter)
add_subdirectory(test)
add_subdirectory(vtk)
