# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(command)
add_subdirectory(command_option)
add_subdirectory(exception)
add_subdirectory(nc_attribute)
add_subdirectory(nc_cntr)
add_subdirectory(nc_dimension)
add_subdirectory(nc_variable)
add_subdirectory(theta_field)
add_subdirectory(theta_field_matrix)
add_subdirectory(theta_grid)
